--- a/frontend/src/app/settings/external-manager/external-data-editor/data-editor.component.html
+++ b/frontend/src/app/settings/external-manager/external-data-editor/data-editor.component.html
@@ -5,24 +5,36 @@
         <label>外接程序路径</label>
         <input type="text" class="form-control" formControlName="outSoftwarePath" caValidityClass/>
       </div>
+      <small *ngIf="getControl('outSoftwarePath').dirty && getControl('outSoftwarePath').hasError('required')" class="invalid-feedback">
+        必填项.
+      </small>
     </div>
     <div class="form-group">
       <div class="wrap">
         <label>文件路径</label>
         <input type="text" class="form-control" formControlName="filePath" caValidityClass/>
       </div>
+      <small *ngIf="getControl('filePath').dirty && getControl('filePath').hasError('required')" class="invalid-feedback">
+        必填项.
+      </small>
     </div>
     <div class="form-group">
       <div class="wrap">
         <label>日志路径</label>
         <input type="text" class="form-control" formControlName="logPath" caValidityClass/>
       </div>
+      <small *ngIf="getControl('logPath').dirty && getControl('logPath').hasError('required')" class="invalid-feedback">
+        必填项.
+      </small>
     </div>
     <div class="form-group">
       <div class="wrap">
         <label>文件上限</label>
         <input type="number" class="form-control" formControlName="fileMaxSize" caValidityClass/>
       </div>
+      <small *ngIf="getControl('fileMaxSize').dirty && getControl('fileMaxSize').hasError('required')" class="invalid-feedback">
+        必填项.
+      </small>
     </div>
     <div class="modal-buttons">
       <button type="submit" class="btn btn-primary">保存</button>
