--- a/frontend/src/app/settings/news-manager/data-editor/data-editor.component.html
+++ b/frontend/src/app/settings/news-manager/data-editor/data-editor.component.html
@@ -5,6 +5,15 @@
         <label>新闻名称</label>
         <input type="text" class="form-control" formControlName="title" placeholder=""  caValidityClass/>
       </div>
+      <small *ngIf="getControl('title').dirty && getControl('title').hasError('pattern')" class="invalid-feedback">
+        名称格式错误.
+      </small>
+      <small *ngIf="getControl('title').dirty && getControl('title').hasError('maxLength')" class="invalid-feedback">
+        最大长度不能超过{{ titleLengthLimit }}.
+      </small>
+      <small *ngIf="getControl('title').dirty && getControl('title').hasError('required')" class="invalid-feedback">
+        必填项.
+      </small>
     </div>
     <div class="modal-buttons">
       <button type="submit" class="btn btn-primary">Save</button>
