--- a/frontend/src/app/settings/user-manager/create/create.component.html
+++ b/frontend/src/app/settings/user-manager/create/create.component.html
@@ -3,31 +3,31 @@
     <div class="wrapper">
       <label>登录账号</label>
       <input type="text" class="form-control" id="userName" placeholder="user name" formControlName="userName" caValidityClass/>
-      <small *ngIf="getControl('userName').hasError('pattern')" class="invalid-feedback">
-        账号格式错误.
-      </small>
-      <small *ngIf="getControl('userName').hasError('maxLength')" class="invalid-feedback">
-        最大长度不能超过{{ titleLengthLimit }}.
-      </small>
-      <small *ngIf="getControl('userName').hasError('required')" class="invalid-feedback">
-        必填项.
-      </small>
     </div>
+    <small *ngIf="getControl('userName').dirty && getControl('userName').hasError('pattern')" class="invalid-feedback">
+      账号格式错误.
+    </small>
+    <small *ngIf="getControl('userName').dirty && getControl('userName').hasError('maxLength')" class="invalid-feedback">
+      最大长度不能超过{{ titleLengthLimit }}.
+    </small>
+    <small *ngIf="getControl('userName').dirty && getControl('userName').hasError('required')" class="invalid-feedback">
+      必填项.
+    </small>
   </div>
   <div class="form-group">
     <div class="wrapper">
       <label>用户名称</label>
       <input type="text" class="form-control" id="name" placeholder="name" formControlName="name" caValidityClass/>
-      <small *ngIf="getControl('name').hasError('pattern')" class="invalid-feedback">
-        格式错误.
-      </small>
-      <small *ngIf="getControl('name').hasError('maxlength')" class="invalid-feedback">
-        最大长度不能超过{{ titleLengthLimit }}.
-      </small>
-      <small *ngIf="getControl('name').hasError('required')" class="invalid-feedback">
-        必填项.
-      </small>
     </div>
+    <small *ngIf="getControl('name').dirty && getControl('name').hasError('pattern')" class="invalid-feedback">
+      格式错误.
+    </small>
+    <small *ngIf="getControl('name').dirty && getControl('name').hasError('maxlength')" class="invalid-feedback">
+      最大长度不能超过{{ titleLengthLimit }}.
+    </small>
+    <small *ngIf="getControl('name').dirty && getControl('name').hasError('required')" class="invalid-feedback">
+      必填项.
+    </small>
   </div>
   <div class="form-group">
     <div class="wrapper">
@@ -35,10 +35,10 @@
       <ca-select formControlName="communityId">
           <ca-option *ngFor="let community of communities" [value]="community.id">{{ community.name }}</ca-option>
       </ca-select>
-      <small *ngIf="getControl('communityId').hasError('required')" class="invalid-feedback">
-        必填项.
-      </small>
     </div>
+    <small *ngIf="getControl('communityId').dirty && getControl('communityId').hasError('required')" class="invalid-feedback">
+      必填项.
+    </small>
   </div>
   <div class="form-group">
     <div class="wrapper permission-panel">
@@ -46,9 +46,6 @@
       <div class="check-box-panel">
         <ca-input-checkbox *ngFor="let item of roleArray" [formControl]="item.control" [value]="item.role.name">{{ item.role.name }}</ca-input-checkbox>
       </div>
-      <small *ngIf="getControl('roles').hasError('required')" class="invalid-feedback">
-        必填项.
-      </small>
     </div>
   </div>
   <div class="form-group">
@@ -58,10 +55,10 @@
         <ca-input-radio [value]="true" formControlName="isEnabled"><span>是</span></ca-input-radio>
         <ca-input-radio [value]="false" formControlName="isEnabled"><span>否</span></ca-input-radio>
       </div>
-      <small *ngIf="getControl('isEnabled').hasError('required')" class="invalid-feedback">
-        必填项.
-      </small>
     </div>
+    <small *ngIf="getControl('isEnabled').dirty && getControl('isEnabled').hasError('required')" class="invalid-feedback">
+      必填项.
+    </small>
   </div>
   <div class="modal-buttons">
     <button type="submit" class="btn btn-primary">保存</button>
